Fix layout on mobile (#894)
Fix layout

--- a/src/components/layout/_layout.scss
+++ b/src/components/layout/_layout.scss
@@ -13,8 +13,9 @@ $layoutGapWidth: gutter(5 / 6);
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    max-width: $layoutMaxWidth;
+    max-width: 100%;
     margin: $layoutContainerMarginTop auto;
+    width: 100%;
 
     @include sgBreakpoint(medium-up) {
       margin-top: $layoutContainerMarginTop + rhythm(1);
